@@ -17,13 +17,6 @@
  * @author       XOOPS Development Team
  */
 
-$pathIcon32 = Xmf\Module\Admin::iconUrl('', 32);
-
-//echo "<div class='adminfooter'>\n" . "  <div style='text-align: center;'>\n" . "    <a href='https://xoops.org' rel='external'><img src='{$pathIcon32}/xoopsmicrobutton.gif' alt='XOOPS' title='XOOPS'></a>\n" . "  </div>\n" . '  ' . _AM_MODULEADMIN_ADMIN_FOOTER . "\n" . '</div>';
-
-$helper = \XoopsModules\Tdmdownloads\Helper::getInstance();
-$utility->checkVerModule($helper);
-
 if (isset($templateMain)) {
     $GLOBALS['xoopsTpl']->display("db:{$templateMain}");
 }
